--- a/lti_consumer/templates/html/student.html
+++ b/lti_consumer/templates/html/student.html
@@ -1,6 +1,6 @@
 <h2 class="problem-header">
     ## Translators:  "External resource" means that this learning module is hosted on a platform external to the edX LMS
-    ${display_name} (External resource)
+    ${display_name}
 </h2>
 
 % if has_score and weight:
